--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@ http://www.tooplate.com/view/2077-modern-town
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">Trang chủ</a>
+                <a href="index.html" class="navbar-brand">Trang chủ</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right main-navigation">
-                    <li><a href="#about" class="smoothScroll">ĐĂNG KÝ</a></li>
-                    <li><a href="#testimonial" class="smoothScroll">THỂ LỆ</a></li>
+                    <!-- <li><a href="#about" class="smoothScroll">ĐĂNG KÝ</a></li> -->
+                    <li><a href="rules.html" class="smoothScroll">THỂ LỆ</a></li>
                     <li><a href="#contact" class="smoothScroll">LIÊN HỆ</a></li>
                 </ul>
             </div>
