--- a/rules.html
+++ b/rules.html
@@ -27,7 +27,7 @@ http://www.tooplate.com/view/2077-modern-town
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
-    <section class="navbar navbar-default navbar-fixed-top">
+    <section class="navbar navbar-default navbar-fixed-top sticky-navigation" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -35,12 +35,12 @@ http://www.tooplate.com/view/2077-modern-town
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand fa fa-home"></a>
+                <a href="index.html" class="navbar-brand">Trang chủ</a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right main-navigation">
-                    <li><a href="#about" class="smoothScroll">ĐĂNG KÝ</a></li>
-                    <li><a href="#testimonial" class="smoothScroll">THỂ LỆ</a></li>
+                    <!-- <li><a href="#about" class="smoothScroll">ĐĂNG KÝ</a></li> -->
+                    <li><a href="rules.html" class="smoothScroll">THỂ LỆ</a></li>
                     <li><a href="#contact" class="smoothScroll">LIÊN HỆ</a></li>
                 </ul>
             </div>
